--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
+    "debug": "cross-env NODE_OPTIONS=\"--inspect\" next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.6.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "typescript": "^5.3.3"
